# martijnbraam-pyatem

./: .gitignore  100-blackmagicdesign.rules  LICENSE  README  README.md  colors.c  meson.build  meson_options.txt  openswitcher-develop.sh  openswitcher-install.sh  proxy-full.toml  proxy-xtouch.toml  proxy.toml  publish-pypi.sh  pyhyperdeckemu.py  setup.py  test-against-hardware.py  tryout.patch
.builds/: site.yml
bmd_setup/: __main__.py  bmd-setup.1.scd  bmd-setup.in  meson.build  window.py
bmd_setup/data/: meson.build  nl.brixit.Setup.appdata.xml  nl.brixit.Setup.desktop
build-aux/: nl.brixit.Setup.json  nl.brixit.Switcher.json
data/: meson.build  nl.brixit.Switcher.appdata.xml  nl.brixit.Switcher.desktop  nl.brixit.Switcher.gschema.xml
docs/: commands.rst  conf.py  converters.rst  fields.rst  index.rst  media.rst  proxy.rst  python.rst  tcptransport.rst  udptransport.rst  usbtransport.rst
docs/commands/: audiomixer.rst  camera.rst  encoder.rst  fairlightmixer.rst  filetransfer.rst  hardware.rst  switcher.rst
docs/fields/: audiomixer.rst  encoder.rst  fairlightmixer.rst  filetransfer.rst  hardware.rst  switcher.rst
examples/: apiserver.py  cli.py  stills.py
gnome_atem/: __main__.py  atem.gresource  atemwindow.py
gnome_atem/ui/: mixer.glade  style.css
gtk_switcher/: __main__.py  adjustmententry.py  atem.gresource.xml  atemwindow.py  audio.py  camera.py  colorwheel.py  connectionwindow.py  debugger.py  decorators.py  dial.py  downstreamkey.py  eqcurve.py  eqwindow.py  gtklogadjustment.py  layout.py  macroeditor.py  media.py  meson.build  midi.py  mixeffect.py  mixeffect_aux.py  preferences.py  preferenceswindow.py  presetwindow.py  routing.py  stream_data.py  switcher-control.1.scd  switcher-control.in  switcher.py  template_i18n.py  upstreamkey.py  videohub.py  videohubbus.py  videohubconnection.py
gtk_switcher/ui/: connection.glade  debugger.glade  downstream-keyer.glade  eq.glade  macro-editor.glade  mixeffect-aux.glade  mixeffect.glade  mixer.glade  preferences.glade  preferences.ui~  preset.glade  shortcuts.ui  style.css  upstream-keyer.glade  videohub-bus.glade  videohub.glade
notebooks/: clip-upload-notes.txt  constellation-fields.txt  eqcurve.ipynb  mini-extreme-usb.txt
openswitcher_proxy/: __main__.py  atemswitch.1.scd  cli-switch.py  error.py  frontend.py  frontend_dmx.py  frontend_httpapi.py  frontend_midi.py  frontend_mqtt.py  frontend_status.py  frontend_tcp.py  hardware.py  hardware_merge_me.py  meson.build  openswitcher-proxy.1.scd  openswitcher-proxy.in
po/: LINGUAS  POTFILES  cs.po  da.po  de.po  en.po  es.po  meson.build  nb_NO.po  nl.po  openswitcher.pot  sv.po  tr.po
pyatem/: cameracontrol.py  colorspace.c  command.py  debuglog.py  emulator.py  field.py  hexdump.py  locate.py  macro.py  macrocommand.py  media.py  mediaconvertmodule.c  protocol.py  socketqueue.py  test_colorspace.py  test_media.py  test_rle.py  transfer.py  transport.py  videohub.py
pyatem/converters/: __main__.py  converter.py  lut.py  protocol.py  test_lut.py
pyatem/dissector/: atem_dissector.tpl  generator.py
pyatem/fixtures/: linear-17.cube
testset/: ATEM Mini Pro.yml
utils/: atem-to-rgb.c  dump-topology.py  dump-unknown.py  flash-camera.py
