install_data('nl.brixit.Switcher.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications'),
)

install_data('nl.brixit.Switcher.gschema.xml',
    install_dir: join_paths(get_option('datadir'), 'glib-2.0/schemas')
)

install_data(['nl.brixit.Switcher.appdata.xml'],
             install_dir : get_option('datadir') / 'metainfo')

install_data('nl.brixit.Switcher.svg',
    install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)
