install_data('nl.brixit.Setup.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications'),
)

install_data(['nl.brixit.Setup.appdata.xml'],
             install_dir : get_option('datadir') / 'metainfo')

install_data('nl.brixit.Setup.svg',
    install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)
